name:                zxcvbn
version:             0.0.1
synopsis:            ZXCVBN Password Strength Estimator
description:         Haskell port of the zxcvbn algorithm described at
 https://tech.dropbox.com/2012/04/zxcvbn-realistic-password-strength-estimation/
license:             OtherLicense
license-file:        LICENSE
author:              G. Ralph Kuntz, MD
maintainer:          grk@usa.net
copyright:           Copyright 2012 G. Ralph Kuntz, MD
category:            Security
build-type:          Simple
cabal-version:       >=1.8

executable BuildDataFiles
  main-is:             BuildDataFiles.hs
  ghc-options:         -Wall -Werror
  build-depends:       base == 4.5.*
                     , base64-bytestring >= 1.0.0.0
                     , binary >= 0.5.1.0
                     , bytestring >= 0.9.2.1
                     , containers >= 0.4.2.1
                     , directory >= 1.1.0.2
                     , HTTP >= 4000.2.5
                     , HaXml >= 1.23.3
                     , network == 2.3.1.0
                     , regex-base >= 0.93.2
                     , regex-pcre-builtin >= 0.94.4.3.8.31
                     , text >= 0.11.2.3
                     , zlib >= 0.5.4.0

executable zxcvbn
  main-is:             Main.hs
  ghc-options:         -Wall
  build-depends:       base == 4.5.*
                     , base64-bytestring >= 1.0.0.0
                     , binary >= 0.5.1.0
                     , bytestring >= 0.9.2.1
                     , containers >= 0.4.2.1
                     , text >= 0.11.2.3
                     , zlib >= 0.5.4.0